update: improve dynamic difficult controller